Add Profile E benchmarks and local failure attribution for helper-seat selection

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,6 @@ minversion = 6.0
 addopts = -ra
 testpaths = 
     tests
-pythonpath = 
-    .
+pythonpath = .
+markers =
+    slow: slow/benchmark tests (opt-in or longer-running)
